<resources>
    <string name="app_name">OCR</string>
    <string name="after_unload">After Unload</string>
    <string name="after_load">After Load</string>
    <string name="pre_load">Pre Load</string>
    <string name="report">Report</string>
    <string name="vehicle_number">Vehicle #</string>
    <string name="text_do">DO #</string>
    <string name="home">Home</string>
    <string name="check_tracking">Check Tracking</string>
    <string name="tracking_status">Tracking Status</string>
    <string name="last_tracking_time">Last Tracking Time</string>
    <string name="location">Location</string>
    <string name="save">Save</string>
    <string name="confirm">Confirm</string>
    <string name="restart">Restart</string>
    <string name="manual">Manual</string>
    <string name="next">Next</string>
    <string name="vehicle">Vehicle</string>
    <string name="net_weight">Net Weight</string>
    <string name="invoice_no">Invoice #</string>
    <string name="customer">Customer</string>
    <string name="text_lr">LR #</string>
    <string name="waybill">Form-D/Waybill</string>
    <string name="status">Status</string>
    <string name="datetime">Date &amp; Time</string>
    <string name="print">Print</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="avatar">Company Logo</string>
    <string name="title_activity_show_ocr_data">ShowOcrDataActivity</string>

    <string-array name="material">
        <item>Select Material</item>
    </string-array>

    <string-array name="source">
        <item>Select Source</item>
    </string-array>

    <string-array name="ship_to_party">
        <item>Select ship to party</item>
    </string-array>

    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Ocr dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Ocr Detector Sample</string>
    <string name="ocr_header">Click &quot;Detect Text&quot; to detect text</string>
    <string name="read_text">Detect Text</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="ocr_success">Text read successfully</string>
    <string name="ocr_failure">No text captured</string>
    <string name="ocr_error">"Error reading text: %1$s"</string>
    <string name="string_next" />
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="read_text_scanner">Read Text</string>
    <string name="read_text_scanner1">Read with Flash</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="flash">Flash</string>
    <string name="ocr">Ocr</string>
    <string name="logout">Logout</string>
    <string name="my_dashboard">My Dashboard</string>
    <string name="hash">Flash</string>
    <string name="skip">Skip/Next</string>
    <string name="capture_upload">Capture &amp; Upload</string>
</resources>