<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        tools:context=".PreLoadDetails">

        <TextView
            android:id="@+id/label_vehicle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:labelFor="@id/value_vehicle"
            android:text="@string/vehicle_number"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.115" />

        <TextView
            android:id="@+id/label_tracking_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/value_tracking_time"
            android:text="@string/last_tracking_time"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/value_vehicle"
            app:layout_constraintVertical_bias="0.052" />

        <TextView
            android:id="@+id/label_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/value_location"
            android:text="@string/location"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/value_tracking_time"
            app:layout_constraintVertical_bias="0.06" />

        <TextView
            android:id="@+id/label_do"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/value_do"
            android:text="@string/text_do"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/value_location"
            app:layout_constraintVertical_bias="0.067" />


        <TextView
            android:id="@+id/value_vehicle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="JH10AG2345"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline4"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.115" />

        <TextView
            android:id="@+id/value_tracking_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="NA"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/value_vehicle"
            app:layout_constraintVertical_bias="0.052" />

        <TextView
            android:id="@+id/value_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="NA"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/value_tracking_time"
            app:layout_constraintVertical_bias="0.06" />

        <TextView
            android:id="@+id/value_do"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="64dp"
            android:layout_marginRight="64dp"
            android:text="23456/23456/23456"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/value_location"
            app:layout_constraintVertical_bias="0.067" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_40"
            android:background="@drawable/button_bg"
            android:drawableEnd="@drawable/arrow"
            android:drawableRight="@drawable/arrow"
            android:paddingHorizontal="@dimen/dp_20"
            android:text="@string/confirm"
            android:textColor="@android:color/white"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/value_do" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="156dp" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="175dp" />

    </android.support.constraint.ConstraintLayout>
</layout>