<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        app:cardBackgroundColor="@android:color/white"
        app:contentPadding="10dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".PreLoadDetails">

            <TextView
                android:id="@+id/label_vehicle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:labelFor="@id/value_vehicle"
                android:text="@string/vehicle_number"
                android:textColor="@android:color/darker_gray"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.115" />

            <TextView
                android:id="@+id/value_vehicle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="JH10AG2345"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_vehicle"
                app:layout_constraintVertical_bias="0.115" />

            <TextView
                android:id="@+id/label_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/value_status"
                android:text="@string/status"
                android:textColor="@android:color/darker_gray"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.85"
                app:layout_constraintStart_toEndOf="@id/label_vehicle"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/value_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Active"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.85"
                app:layout_constraintStart_toEndOf="@id/label_vehicle"
                app:layout_constraintTop_toBottomOf="@+id/label_status" />

            <TextView
                android:id="@+id/label_datetime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/datetime"
                android:textColor="@android:color/darker_gray"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/value_vehicle" />

            <TextView
                android:id="@+id/value_datetime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="23-08-2020 05:10 PM"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_datetime" />

            <TextView
                android:id="@+id/label_lr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_lr"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/darker_gray"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.85"
                app:layout_constraintStart_toEndOf="@id/label_datetime"
                app:layout_constraintTop_toBottomOf="@+id/value_status" />

            <TextView
                android:id="@+id/value_lr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="23456/23456/23456"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_lr" />


            <TextView
                android:id="@+id/label_invoice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/invoice_no"
                android:textColor="@android:color/darker_gray"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/value_lr" />


            <TextView
                android:id="@+id/value_invoice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="23456ABC23456"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_invoice" />


        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</layout>